# dbt_gnucash

./: .gitignore  .pre-commit-config.yaml  Makefile  dbt_project.yml  profiles.yml.example  pyproject.toml
analyses/: balance_sheet.sql
models/: accounts_enriched.sql  dim_accounts.sql  fct_splits.sql  fct_transactions.sql  report_account_balances.sql  schema.yml  sources.yml  splits_enriched.sql  stg_splits.sql
models/marts/: dim_accounts.sql  dim_prices.sql  rpt_account_balances.sql  rpt_accounts_to_reconcile.sql
models/reports/: rpt_account_balances.sql  rpt_balance_sheet.sql  rpt_net_worth.sql
models/staging/: sources.yml  stg_accounts.sql  stg_billterms.sql  stg_books.sql  stg_budget_amounts.sql  stg_budgets.sql  stg_commodities.sql  stg_customers.sql  stg_employees.sql  stg_entries.sql  stg_gnclock.sql  stg_invoices.sql  stg_jobs.sql  stg_lots.sql  stg_orders.sql  stg_prices.sql  stg_recurrences.sql  stg_schedxactions.sql  stg_slots.sql  stg_splits.sql  stg_taxtable_entries.sql  stg_taxtables.sql  stg_transactions.sql  stg_vendors.sql  stg_versions.sql
seeds/: slot_types.csv
