[tool.poetry]
name = "dbt-gnucash"
version = "0.1.0"
description = ""
authors = ["ChinChon Na <chinchon91@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_gnucash"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
